fixed layout overflow

--- a/web.css
+++ b/web.css
@@ -1,7 +1,7 @@
 
-body {
+html body {
     margin: 0;
-    min-height: 100vh;
+    min-height: 100%;
     background-color: rgba(240, 241, 243, 1);
     /* background-color: #f8f9fb; */
     /* margin-bottom: 100px; */
@@ -124,7 +124,7 @@ body {
     /* grid-template-areas: 
        mdbotz mdbotz;*/
     /* height: 50vh; */
-    height: max-content
+    min-height: 100dvh;
 }
 
 
